--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="reset.css">
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    
+    <div class="flex-container">
+        <div class="title"><h1>SketchPad</h1></div>
+        <div class="content">
+            <div class="board"></div>
+            <div class="buttons">
+                <button>Black</button>
+                <button>Eraser</button>
+                <button>Random</button>
+                <button>Rest</button>
+            </div>
+            <div>
+                <input type="text" placeholder="Size of board" value="16" />
+                <button>Set Size</button>
+            </div>
+        </div>
+    </div>
 </body>
-<script src="scripts.js"></script>
+<script src="script.js"></script>
 </html>
