--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <button>Rest</button>
             </div>
             <div>
-                <input type="text" placeholder="Size of board" value="16" />
+                <input type="text" placeholder="Size of board" value="16" onchange="changeSize(this.value)"/>
                 <button>Set Size</button>
             </div>
         </div>
